include/qnicorn/qnicorn.h

typedef struct qc_struct qc_engine;
typedef size_t qc_hook;
// Architecture type
typedef enum qc_arch {
    QC_ARCH_ARM = 1, // ARM architecture (including Thumb, Thumb-2)
    QC_ARCH_ARM64,   // ARM-64, also called AArch64
    QC_ARCH_MIPS,    // Mips architecture
    QC_ARCH_X86,     // X86 architecture (including x86 & x86-64)
    QC_ARCH_PPC,     // PowerPC architecture
    QC_ARCH_SPARC,   // Sparc architecture
    QC_ARCH_M68K,    // M68K architecture
    QC_ARCH_RISCV,   // RISCV architecture
    QC_ARCH_MAX,
} qc_arch;
// Mode type
typedef enum qc_mode {
    QC_MODE_LITTLE_ENDIAN = 0,    // little-endian mode (default mode)
    QC_MODE_BIG_ENDIAN = 1 << 30, // big-endian mode

    // arm / arm64
    QC_MODE_ARM = 0,        // ARM mode
    QC_MODE_THUMB = 1 << 4, // THUMB mode (including Thumb-2)
    // Depreciated, use QC_ARM_CPU_* with qc_ctl instead.
    QC_MODE_MCLASS = 1 << 5, // ARM's Cortex-M series.
    QC_MODE_V8 = 1 << 6, // ARMv8 A32 encodings for ARM (currently unsupported)

    // arm (32bit) cpu types
    // Depreciated, use QC_ARM_CPU_* with qc_ctl instead.
    QC_MODE_ARM926 = 1 << 7,  // ARM926 CPU type
    QC_MODE_ARM946 = 1 << 8,  // ARM946 CPU type
    QC_MODE_ARM1176 = 1 << 9, // ARM1176 CPU type

    // mips
    QC_MODE_MICRO = 1 << 4,    // MicroMips mode (currently unsupported)
    QC_MODE_MIPS3 = 1 << 5,    // Mips III ISA (currently unsupported)
    QC_MODE_MIPS32R6 = 1 << 6, // Mips32r6 ISA (currently unsupported)
    QC_MODE_MIPS32 = 1 << 2,   // Mips32 ISA
    QC_MODE_MIPS64 = 1 << 3,   // Mips64 ISA

    // x86 / x64
    QC_MODE_16 = 1 << 1, // 16-bit mode
    QC_MODE_32 = 1 << 2, // 32-bit mode
    QC_MODE_64 = 1 << 3, // 64-bit mode

    // ppc
    QC_MODE_PPC32 = 1 << 2, // 32-bit mode
    QC_MODE_PPC64 = 1 << 3, // 64-bit mode (currently unsupported)
    QC_MODE_QPX =
        1 << 4, // Quad Processing eXtensions mode (currently unsupported)

    // sparc
    QC_MODE_SPARC32 = 1 << 2, // 32-bit mode
    QC_MODE_SPARC64 = 1 << 3, // 64-bit mode
    QC_MODE_V9 = 1 << 4,      // SparcV9 mode (currently unsupported)

    // riscv
    QC_MODE_RISCV32 = 1 << 2, // 32-bit mode
    QC_MODE_RISCV64 = 1 << 3, // 64-bit mode

    // m68k
} qc_mode;
// All type of errors encountered by Unicorn API.
// These are values returned by qc_errno()
typedef enum qc_err {
    QC_ERR_OK = 0,         // No error: everything was fine
    QC_ERR_NOMEM,          // Out-Of-Memory error: qc_open(), qc_emulate()
    QC_ERR_ARCH,           // Unsupported architecture: qc_open()
    QC_ERR_HANDLE,         // Invalid handle
    QC_ERR_MODE,           // Invalid/unsupported mode: qc_open()
    QC_ERR_VERSION,        // Unsupported version (bindings)
    QC_ERR_READ_UNMAPPED,  // Quit emulation due to READ on unmapped memory:
                           // qc_emu_start()
    QC_ERR_WRITE_UNMAPPED, // Quit emulation due to WRITE on unmapped memory:
                           // qc_emu_start()
    QC_ERR_FETCH_UNMAPPED, // Quit emulation due to FETCH on unmapped memory:
                           // qc_emu_start()
    QC_ERR_HOOK,           // Invalid hook type: qc_hook_add()
    QC_ERR_INSN_INVALID,   // Quit emulation due to invalid instruction:
                           // qc_emu_start()
    QC_ERR_MAP,            // Invalid memory mapping: qc_mem_map()
    QC_ERR_WRITE_PROT,     // Quit emulation due to QC_MEM_WRITE_PROT violation:
                           // qc_emu_start()
    QC_ERR_READ_PROT,      // Quit emulation due to QC_MEM_READ_PROT violation:
                           // qc_emu_start()
    QC_ERR_FETCH_PROT,     // Quit emulation due to QC_MEM_FETCH_PROT violation:
                           // qc_emu_start()
    QC_ERR_ARG, // Inavalid argument provided to qc_xxx function (See specific
                // function API)
    QC_ERR_READ_UNALIGNED,  // Unaligned read
    QC_ERR_WRITE_UNALIGNED, // Unaligned write
    QC_ERR_FETCH_UNALIGNED, // Unaligned fetch
    QC_ERR_HOOK_EXIST,      // hook for this event already existed
    QC_ERR_RESOURCE,        // Insufficient resource: qc_emu_start()
    QC_ERR_EXCEPTION,       // Unhandled CPU exception
} qc_err;
/*
  Memory region mapped by qc_mem_map() and qc_mem_map_ptr()
  Retrieve the list of memory regions with qc_mem_regions()
*/
typedef struct qc_mem_region {
    uint64_t begin; // begin address of the region (inclusive)
    uint64_t end;   // end address of the region (inclusive)
    uint32_t perms; // memory permissions of the region
} qc_mem_region;
// All type of queries for qc_query() API.
typedef enum qc_query_type {
    // Dynamically query current hardware mode.
    QC_QUERY_MODE = 1,
    QC_QUERY_PAGE_SIZE, // query pagesize of engine
    QC_QUERY_ARCH, // query architecture of engine (for ARM to query Thumb mode)
    QC_QUERY_TIMEOUT, // query if emulation stops due to timeout (indicated if
                      // result = True)
} qc_query_type;
// Opaque storage for CPU context, used with qc_context_*()
struct qc_context;
typedef struct qc_context qc_context;
/*
 Return combined API version & major and minor version numbers.

 @major: major number of API version
 @minor: minor number of API version

 @return hexical number as (major << 8 | minor), which encodes both
     major & minor versions.
     NOTE: This returned value can be compared with version number made
     with macro QC_MAKE_VERSION

 For example, second API version would return 1 in @major, and 1 in @minor
 The return value would be 0x0101

 NOTE: if you only care about returned value, but not major and minor values,
 set both @major & @minor arguments to NULL.
*/
UNICORN_EXPORT
unsigned int qc_version(unsigned int *major, unsigned int *minor);
/*
 Determine if the given architecture is supported by this library.

 @arch: architecture type (QC_ARCH_*)

 @return True if this library supports the given arch.
*/
UNICORN_EXPORT
bool qc_arch_supported(qc_arch arch);
/*
 Create new instance of unicorn engine.

 @arch: architecture type (QC_ARCH_*)
 @mode: hardware mode. This is combined of QC_MODE_*
 @uc: pointer to qc_engine, which will be updated at return time

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_open(qc_arch arch, qc_mode mode, qc_engine **uc);
/*
 Close a Unicorn engine instance.
 NOTE: this must be called only when there is no longer any
 usage of @uc. This API releases some of @uc's cached memory, thus
 any use of the Unicorn API with @uc after it has been closed may
 crash your application. After this, @uc is invalid, and is no
 longer usable.

 @uc: pointer to a handle returned by qc_open()

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_close(qc_engine *uc);
/*
 Query internal status of engine.

 @uc: handle returned by qc_open()
 @type: query type. See qc_query_type

 @result: save the internal status queried

 @return: error code of qc_err enum type (QC_ERR_*, see above)
*/
UNICORN_EXPORT
qc_err qc_query(qc_engine *uc, qc_query_type type, size_t *result);
/*
 Report the last error number when some API function fails.
 Like glibc's errno, qc_errno might not retain its old value once accessed.

 @uc: handle returned by qc_open()

 @return: error code of qc_err enum type (QC_ERR_*, see above)
*/
UNICORN_EXPORT
qc_err qc_errno(qc_engine *uc);
/*
 Return a string describing given error code.

 @code: error code (see QC_ERR_* above)

 @return: returns a pointer to a string that describes the error code
   passed in the argument @code
 */
UNICORN_EXPORT
const char *qc_strerror(qc_err code);
/*
 Write to register.

 @uc: handle returned by qc_open()
 @regid:  register ID that is to be modified.
 @value:  pointer to the value that will set to register @regid

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_reg_write(qc_engine *uc, int regid, const void *value);
/*
 Read register value.

 @uc: handle returned by qc_open()
 @regid:  register ID that is to be retrieved.
 @value:  pointer to a variable storing the register value.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_reg_read(qc_engine *uc, int regid, void *value);
/*
 Write to a range of bytes in memory.

 @uc: handle returned by qc_open()
 @address: starting memory address of bytes to set.
 @bytes:   pointer to a variable containing data to be written to memory.
 @size:   size of memory to write to.

 NOTE: @bytes must be big enough to contain @size bytes.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_mem_write(qc_engine *uc, uint64_t address, const void *bytes,
                    size_t size);
/*
 Read a range of bytes in memory.

 @uc: handle returned by qc_open()
 @address: starting memory address of bytes to get.
 @bytes:   pointer to a variable containing data copied from memory.
 @size:   size of memory to read.

 NOTE: @bytes must be big enough to contain @size bytes.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_mem_read(qc_engine *uc, uint64_t address, void *bytes, size_t size);
/*
 Emulate machine code in a specific duration of time.

 @uc: handle returned by qc_open()
 @begin: address where emulation starts
 @until: address where emulation stops (i.e. when this address is hit)
 @timeout: duration to emulate the code (in microseconds). When this value is 0,
        we will emulate the code in infinite time, until the code is finished.
 @count: the number of instructions to be emulated. When this value is 0,
        we will emulate all the code available, until the code is finished.

 NOTE: The internal states of the engine is guranteed to be correct if and only
       if qc_emu_start returns without any errors or errors have been handled in
       the callbacks.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_emu_start(qc_engine *uc, uint64_t begin, uint64_t until,
                    uint64_t timeout, size_t count);
/*
 Stop emulation (which was started by qc_emu_start() API.
 This is typically called from callback functions registered via tracing APIs.

 @uc: handle returned by qc_open()

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_emu_stop(qc_engine *uc);
/*
 Register callback for a hook event.
 The callback will be run when the hook event is hit.

 @uc: handle returned by qc_open()
 @hh: hook handle returned from this registration. To be used in qc_hook_del()
 API
 @type: hook type, refer to qc_hook_type enum
 @callback: callback to be run when instruction is hit
 @user_data: user-defined data. This will be passed to callback function in its
      last argument @user_data
 @begin: start address of the area where the callback is in effect (inclusive)
 @end: end address of the area where the callback is in effect (inclusive)
   NOTE 1: the callback is called only if related address is in range [@begin,
 @end] NOTE 2: if @begin > @end, callback is called whenever this hook type is
 triggered
 @...: variable arguments (depending on @type)
   NOTE: if @type = QC_HOOK_INSN, this is the instruction ID.
         currently, only x86 in, out, syscall, sysenter, cpuid are supported.
   NOTE: if @type = QC_HOOK_TCG_OPCODE, arguments are @opcode and @flags. See
 @qc_tcg_op_code and @qc_tcg_op_flag for details.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_hook_add(qc_engine *uc, qc_hook *hh, int type, void *callback,
                   void *user_data, uint64_t begin, uint64_t end, ...);
/*
 Unregister (remove) a hook callback.
 This API removes the hook callback registered by qc_hook_add().
 NOTE: this should be called only when you no longer want to trace.
 After this, @hh is invalid, and no longer usable.

 @uc: handle returned by qc_open()
 @hh: handle returned by qc_hook_add()

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_hook_del(qc_engine *uc, qc_hook hh);
/*
 Map memory in for emulation.
 This API adds a memory region that can be used by emulation.

 @uc: handle returned by qc_open()
 @address: starting address of the new memory region to be mapped in.
    This address must be aligned to 4KB, or this will return with QC_ERR_ARG
 error.
 @size: size of the new memory region to be mapped in.
    This size must be a multiple of 4KB, or this will return with QC_ERR_ARG
 error.
 @perms: Permissions for the newly mapped region.
    This must be some combination of QC_PROT_READ | QC_PROT_WRITE |
 QC_PROT_EXEC, or this will return with QC_ERR_ARG error.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_mem_map(qc_engine *uc, uint64_t address, size_t size, uint32_t perms);
/*
 Map existing host memory in for emulation.
 This API adds a memory region that can be used by emulation.

 @uc: handle returned by qc_open()
 @address: starting address of the new memory region to be mapped in.
    This address must be aligned to 4KB, or this will return with QC_ERR_ARG
 error.
 @size: size of the new memory region to be mapped in.
    This size must be a multiple of 4KB, or this will return with QC_ERR_ARG
 error.
 @perms: Permissions for the newly mapped region.
    This must be some combination of QC_PROT_READ | QC_PROT_WRITE |
 QC_PROT_EXEC, or this will return with QC_ERR_ARG error.
 @ptr: pointer to host memory backing the newly mapped memory. This host memory
 is expected to be an equal or larger size than provided, and be mapped with at
    least PROT_READ | PROT_WRITE. If it is not, the resulting behavior is
 undefined.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_mem_map_ptr(qc_engine *uc, uint64_t address, size_t size,
                      uint32_t perms, void *ptr);
/*
 Unmap a region of emulation memory.
 This API deletes a memory mapping from the emulation memory space.

 @uc: handle returned by qc_open()
 @address: starting address of the memory region to be unmapped.
    This address must be aligned to 4KB, or this will return with QC_ERR_ARG
 error.
 @size: size of the memory region to be modified.
    This size must be a multiple of 4KB, or this will return with QC_ERR_ARG
 error.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_mem_unmap(qc_engine *uc, uint64_t address, size_t size);
/*
 Set memory permissions for emulation memory.
 This API changes permissions on an existing memory region.

 @uc: handle returned by qc_open()
 @address: starting address of the memory region to be modified.
    This address must be aligned to 4KB, or this will return with QC_ERR_ARG
 error.
 @size: size of the memory region to be modified.
    This size must be a multiple of 4KB, or this will return with QC_ERR_ARG
 error.
 @perms: New permissions for the mapped region.
    This must be some combination of QC_PROT_READ | QC_PROT_WRITE |
 QC_PROT_EXEC, or this will return with QC_ERR_ARG error.

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_mem_protect(qc_engine *uc, uint64_t address, size_t size,
                      uint32_t perms);
/*
 Retrieve all memory regions mapped by qc_mem_map() and qc_mem_map_ptr()
 This API allocates memory for @regions, and user must free this memory later
 by qc_free() to avoid leaking memory.
 NOTE: memory regions may be split by qc_mem_unmap()

 @uc: handle returned by qc_open()
 @regions: pointer to an array of qc_mem_region struct. This is allocated by
   Unicorn, and must be freed by user later with qc_free()
 @count: pointer to number of struct qc_mem_region contained in @regions

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_mem_regions(qc_engine *uc, qc_mem_region **regions, uint32_t *count);
/*
 Allocate a region that can be used with qc_context_{save,restore} to perform
 quick save/rollback of the CPU context, which includes registers and some
 internal metadata. Contexts may not be shared across engine instances with
 differing arches or modes.

 @uc: handle returned by qc_open()
 @context: pointer to a qc_context*. This will be updated with the pointer to
   the new context on successful return of this function.
   Later, this allocated memory must be freed with qc_context_free().

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_context_alloc(qc_engine *uc, qc_context **context);
/*
 Save a copy of the internal CPU context.
 This API should be used to efficiently make or update a saved copy of the
 internal CPU state.

 @uc: handle returned by qc_open()
 @context: handle returned by qc_context_alloc()

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_context_save(qc_engine *uc, qc_context *context);
/*
 Restore the current CPU context from a saved copy.
 This API should be used to roll the CPU context back to a previous
 state saved by qc_context_save().

 @uc: handle returned by qc_open()
 @context: handle returned by qc_context_alloc that has been used with
 qc_context_save

 @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_context_restore(qc_engine *uc, qc_context *context);
/*
  Free the context allocated by qc_context_alloc().

  @context: handle returned by qc_context_alloc()

  @return QC_ERR_OK on success, or other value on failure (refer to qc_err enum
   for detailed error).
*/
UNICORN_EXPORT
qc_err qc_context_free(qc_context *context);